fix(pool-row): right-align button

--- a/src/features/view-pools/PoolRow.module.scss
+++ b/src/features/view-pools/PoolRow.module.scss
@@ -3,6 +3,10 @@
 		background: #1a1022;
 		cursor: pointer;
 	}
+
+	.Action {
+		margin-left: auto;
+	}
 }
 
 .Pool {
